--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 	</nav>
 		
     <header>
-			<img class="img-responsive" style="margin: 0 auto;" src="img\logo.png" alt="">    
+			<img class="img-responsive img-center" src="img/logo.png" alt="">    
     </header>
 	<section>
 		<div class="container">
 			<div class="row">
-				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img\button_gioca.png" onclick="location.href='#"></input>
-				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img\button_classifica.png"></input>
-				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img\button_statistiche.png"></input>
+				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_gioca.png" onclick="location.href='gioca.html'"></input>
+				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_classifica.png"></input>
+				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_statistiche.png"></input>
             </div>
         </div>
 	</section>
