--- a/index.html
+++ b/index.html
@@ -8,47 +8,99 @@
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/script.js"></script>
+
 </head>
-  
+
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">WhoQuote</a>
+	<!-- NAVIGATOR -->
+	<nav id="navigator" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+				<div class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#index-navbar">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="#" onclick="populate('index')">WhoQuote</a>
+					</div>
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="index-navbar">
+						<ul class="nav navbar-nav">
+							<li>
+								<a href="#" onclick="populate('about')">About</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+	</nav>
+	<!-- INDEX.HTML -->
+	<div id="index">
+		<header>
+				<img class="img-responsive img-center" src="img/logo.png" alt="">    
+		</header>
+		<section>
+			<div class="container">
+				<div class="row">
+					<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_gioca.png" onclick="populate('gioca')"></input>
+					<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_classifica.png" onclick="populate('classifica')"></input>
+					<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_statistiche.png" onclick="populate('statistiche')"></input>
+				</div>
 			</div>
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li>
-						<a href="#">About</a>
-					</li>
+		</section>
+	</div>
+	<!-- GIOCA.HTML -->
+	<div id="gioca" style="display:none">
+		<header>
+				<img class="img-responsive img-center" src="img/logo.png" alt="">    
+		</header>
+		
+		<section>
+			<div class="container">
+				<div class="row">
+					<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" style="margin-bottom: 10px" type="image" src="img/button_singleplayer.png" onclick="populate('singleplayer')"></input>
+					<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_multiplayer.png" onclick="populate('multiplayer')"></input>
+				</div>
+			</div>
+		</section>
+	</div>
+	<!-- CLASSIFICA.HTML -->
+	<div id="classifica" style="display:none">
+	</div>
+	<!-- STATISTICHE.HTML -->
+	<div id="statistiche" style="display:none">
+	</div>
+	<!-- ABOUT.HTML -->
+	<div id="about" style="display:none">
+		<header>
+			<img class="img-responsive img-center" src="img/logo.png" alt="">
+		</header>
+		<div class="container">
+			<div class="col-lg-4 col-lg-offset-4">
+				<ul style='background-color: transparent' class="list-group text-center">
+				  <li class="list-group-item about">Davide Rezzoli</li>
+				  <li class="list-group-item about">Carlo Cepollaro</li>
+				  <li class="list-group-item about">Peppuz</li>
+				  <li class="list-group-item about">Marco Gamba</li>
+				  <li class="list-group-item about">Edoardo Massazza</li>
 				</ul>
 			</div>
 		</div>
-	</nav>
-		
-    <header>
-			<img class="img-responsive img-center" src="img/logo.png" alt="">    
-    </header>
-	<section>
-		<div class="container">
-			<div class="row">
-				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_gioca.png" onclick="location.href='gioca.html'"></input>
-				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_classifica.png"></input>
-				<input class="col-xs-6 col-xs-offset-3 col-lg-2 col-lg-offset-5" type="image" src="img/button_statistiche.png"></input>
-            </div>
-        </div>
-	</section>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+		<script>
+		  var ul = document.querySelector('ul.list-group');
+			for (var i = ul.children.length; i >= 0; i--) {
+				ul.appendChild(ul.children[Math.random() * i | 0]);
+			}
+		</script>
+	</div>
+	<!-- SINGLEPLAYER.HTML -->
+	<div id="singleplayer" style="display:none">
+	</div>
+	<!-- MULTIPLAYER.HTML -->
+	<div id="multiplayer" style="display:none">
+	</div>
 </body>
-</html>
