--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 								<a href="#" onclick="populate('about')">About</a>
 							</li>
 						</ul>
+						<ul class="nav navbar-nav navbar-right">
+							<li>
+								<a href="fbconfig.php">Login</button>
+							</li>
 					</div>
 				</div>
 	</nav>
