--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li>
-								<a href="fbconfig.php">Login</button>
+								<a href="fbconfig.php">Login</a>
 							</li>
+						</ul>
 					</div>
 				</div>
 	</nav>
