--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+  <audio autoplay>
+    <source src="audio/audio.mp3" type="audio/mpeg">
+  </audio>
 	<!-- NAVIGATOR -->
 	<nav id="navigator" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 				<div class="container">
@@ -45,7 +48,7 @@
 	<!-- INDEX.HTML -->
 	<div id="index">
 		<header>
-				<img class="img-responsive img-center" src="img/logo.png" alt="">    
+				<img class="img-responsive img-center" src="img/logo.png" alt="">
 		</header>
 		<section>
 			<div class="container">
@@ -60,9 +63,9 @@
 	<!-- GIOCA.HTML -->
 	<div id="gioca" style="display:none">
 		<header>
-				<img class="img-responsive img-center" src="img/logo.png" alt="">    
+				<img class="img-responsive img-center" src="img/logo.png" alt="">
 		</header>
-		
+
 		<section>
 			<div class="container">
 				<div class="row">
