--- a/game_template.html
+++ b/game_template.html
@@ -12,7 +12,6 @@
         border: none !important;
       }
     </style>
-
   </head>
 
   <body>
@@ -21,12 +20,13 @@
       <img src="img/bg_game.png" class="img-responsive col-12" alt="">
     </div>
     <div class="" id="controls">
-      <div class="row container" style="margin-top:30px">
-        <a value="cacca" class="col-xs-6 pull-left "style="background-color:transparent;border:none;position:relative">
-          <img src="img/button_white.png" style="border: #0F0 2px solid;border-radius:20px" class="img-responsive">
-          <span style="margin-top:-18%;display:block" class="text-center">Einstein</span>
+      <div class="row container col-xs-10" style="margin-top:30px">
+        <a value="cacca" class="col-xs-6 col-xs-push-1 pull-left "style="border: 2px solid rgb(13,54,170); border-radius:15px; padding:10px 10px">
+          <span style="display:block" class="text-center">Einstein</span>
         </a>
-        <a value="cacca" class="col-xs-6 pull-right "style="background-color:transparent;"><img src="img/button_default.png" class="img-responsive" style="border:#F00 2px solid;border-radius:20px"><span style="margin-top:-18%;display:block" class="text-center">Einstein</span></a>
+        <a value="cacca" class="col-xs-6 col-xs-push-3  pull-left "style="border: 2px solid rgb(13,54,170); border-radius:15px; padding:10px 10px">
+          <span style="display:block" class="text-center">Einstein</span>
+        </a>
       </div>
 
       <div class="container row ">
@@ -46,10 +46,16 @@
         </script>
       </div>
 
-      <div class="row container " style="margin-top:40%">
-        <a class="col-xs-6 pull-left "style="background-color:transparent;border:none"><img src="img/button_white.png" class="img-responsive"></a>
-        <a class="col-xs-6 pull-right "style="background-color:transparent;border:none"><img src="img/button_default.png" class="img-responsive"></a>
+      <div class="row container col-xs-10" style="margin-top:30px">
+        <a value="cacca" class="col-xs-6 col-xs-push-1 pull-left "style="border: 2px solid rgb(13,54,170); border-radius:15px; padding:10px 10px">
+          <span style="display:block" class="text-center">Einstein</span>
+        </a>
+        <a value="cacca" class="col-xs-6 col-xs-push-3  pull-left "style="border: 2px solid rgb(13,54,170); border-radius:15px; padding:10px 10px">
+          <span style="display:block" class="text-center">Einstein</span>
+        </a>
       </div>
+
+
     </div>
 
 
